--- a/order/index.html
+++ b/order/index.html
@@ -17,11 +17,11 @@
 		<link href="../_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.37c3d608.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.7e2d332b.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7cc08105.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.c8ccc28c.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.35cd184e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.4ebb0e4a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d046aab1.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.68de7436.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -121,11 +121,11 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите клиента..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите клиента..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="ООО Транзит"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/company/avatar_company.svg" alt="ООО Транзит"></div>
                     ООО Транзит</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="ИП Иванов"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/company/avatar_company.svg" alt="ИП Иванов"></div>
                     ИП Иванов</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="Самозанятый Ласточкин"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/company/avatar_company.svg" alt="Самозанятый Ласточкин"></div>
                     Самозанятый Ласточкин</a>
             </li></ul>
 </div></div>
@@ -147,9 +147,9 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите менеджера..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите менеджера..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/managers/manager.png" alt="Николай Поздняков"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/managers/manager.png" alt="Николай Поздняков"></div>
                     Николай Поздняков</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Дмитрий Рудин"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/avatar.svg" alt="Дмитрий Рудин"></div>
                     Дмитрий Рудин</a>
             </li></ul>
 </div></div>
@@ -171,9 +171,9 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите сотрудника..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите сотрудника..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Эдуард Рябов"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/avatar.svg" alt="Эдуард Рябов"></div>
                     Эдуард Рябов</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Василий Петров"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/avatar.svg" alt="Василий Петров"></div>
                     Василий Петров</a>
             </li></ul>
 </div></div>
@@ -801,7 +801,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerxmYdaYWl0_J3um45lrln9" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainermZobdI5bW94-zJlJgSYQ5" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -960,7 +960,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerAV9w3v0GUDnGuCRYzUiMj" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerz5t_0SDkq62qpUJT5hz6h" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
@@ -1119,7 +1119,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerv3orsY8ehwaAb9yOeLlJS" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerdqX3viR5jwI9TG0mK6aqq" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">4</th>
                         <td class="px-2 py-4">
@@ -1278,7 +1278,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerGKDbeuJdO3Vh5QE1KdAI0" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerXTp1pGG7oQkiVzngvSZWE" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">5</th>
                         <td class="px-2 py-4">
@@ -1437,7 +1437,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContaineroh80h7mn7X8qdOdtGHGff" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerbcMjhVUOeWEMtfHvt2UEB" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1478,7 +1478,7 @@
 			
 			<script>
 				{
-					__sveltekit_1kmbjwd = {
+					__sveltekit_tu4q7w = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1488,8 +1488,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.7e2d332b.js"),
-						import("../_app/immutable/entry/app.4ebb0e4a.js")
+						import("../_app/immutable/entry/start.7cc08105.js"),
+						import("../_app/immutable/entry/app.d046aab1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
