--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     
 		<link href="./_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7cc08105.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1b2ab9cd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.35cd184e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d705dddc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d046aab1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.030ae6c7.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.68de7436.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -67,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_tu4q7w = {
+					__sveltekit_w30ptg = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7cc08105.js"),
-						import("./_app/immutable/entry/app.d046aab1.js")
+						import("./_app/immutable/entry/start.1b2ab9cd.js"),
+						import("./_app/immutable/entry/app.030ae6c7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
